fix: errros作成箇所の微修正